--- a/src/components/react/calc/calc.scss
+++ b/src/components/react/calc/calc.scss
@@ -7,10 +7,11 @@
         'seven eight nine minus'
         'four five six add'
         'one two three equal'
-        'zero zero decimal equal'
+        'zero zero decimal back'
     ;
-    row-gap: 1px;
-    column-gap: 1px;
-    padding: 10px;
-    background: black;
+    row-gap: 5px;
+    column-gap: 5px;
+    background: transparent;
+    height: min-content;
+    width: min-content;
 }
